--- a/src/Main/Rest.glade
+++ b/src/Main/Rest.glade
@@ -39,11 +39,6 @@
     <property name="can_focus">False</property>
     <property name="pixbuf">../IMG/invoice.png</property>
   </object>
-  <object class="GtkImage" id="Factura_Simplificada">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixbuf">../IMG/receipt.png</property>
-  </object>
   <object class="GtkImage" id="Facturas">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -1083,7 +1078,7 @@
                         <signal name="clicked" handler="on_BT_NewService_clicked" swapped="no"/>
                       </object>
                       <packing>
-                        <property name="x">45</property>
+                        <property name="x">55</property>
                         <property name="y">670</property>
                       </packing>
                     </child>
@@ -1098,7 +1093,7 @@
                         <property name="always_show_image">True</property>
                       </object>
                       <packing>
-                        <property name="x">125</property>
+                        <property name="x">135</property>
                         <property name="y">670</property>
                       </packing>
                     </child>
@@ -1198,7 +1193,7 @@
                         <property name="label" translatable="yes">Total de servicios disponibles:</property>
                       </object>
                       <packing>
-                        <property name="x">45</property>
+                        <property name="x">50</property>
                         <property name="y">740</property>
                       </packing>
                     </child>
@@ -1584,7 +1579,7 @@
                     <child>
                       <object class="GtkScrolledWindow">
                         <property name="width_request">166</property>
-                        <property name="height_request">420</property>
+                        <property name="height_request">415</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="margin_right">40</property>
@@ -1626,7 +1621,7 @@
                       </object>
                       <packing>
                         <property name="x">295</property>
-                        <property name="y">50</property>
+                        <property name="y">520</property>
                       </packing>
                     </child>
                     <child>
@@ -1641,13 +1636,13 @@
                       </object>
                       <packing>
                         <property name="x">295</property>
-                        <property name="y">520</property>
+                        <property name="y">464</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkButton" id="BT_Factura">
                         <property name="width_request">140</property>
-                        <property name="height_request">140</property>
+                        <property name="height_request">138</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
@@ -1656,24 +1651,21 @@
                         <signal name="clicked" handler="on_BT_Factura_clicked" swapped="no"/>
                       </object>
                       <packing>
-                        <property name="x">75</property>
-                        <property name="y">70</property>
+                        <property name="x">315</property>
+                        <property name="y">50</property>
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="BT_FacturaSimplificada">
-                        <property name="width_request">140</property>
-                        <property name="height_request">140</property>
+                      <object class="GtkLabel">
+                        <property name="width_request">100</property>
+                        <property name="height_request">80</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="tooltip_text" translatable="yes">Generar factura simplificada</property>
-                        <property name="image">Factura_Simplificada</property>
-                        <signal name="clicked" handler="on_BT_FacturaSimplificada_clicked" swapped="no"/>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Filtros:</property>
                       </object>
                       <packing>
-                        <property name="x">75</property>
-                        <property name="y">245</property>
+                        <property name="x">333</property>
+                        <property name="y">377</property>
                       </packing>
                     </child>
                   </object>
@@ -1781,6 +1773,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="model">List_F_Clientes</property>
+                            <signal name="cursor-changed" handler="on_Tree_F_Clientes_cursor_changed" swapped="no"/>
                             <child internal-child="selection">
                               <object class="GtkTreeSelection"/>
                             </child>
